Cedilha/y.output
Terminals unused in grammar

   ASPAS_DUPLAS
   ASPAS_SIMPLES
   CONSTANTE
   CERQUILHA


Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 $@2: %empty

    3 $@3: %empty

    4 programa: $@1 declaracoes $@2 assinatura_funcoes $@3 bloco_principal bloco_funcoes

    5 declaracoes: %empty
    6            | declaracao_global PONTOVIRGULA declaracoes

    7 declaracao_global: declaracao
    8                  | declaracao_registro

    9 $@4: %empty

   10 $@5: %empty

   11 declaracao_registro: MEU_TIPO ID LCHAVE $@4 parametros $@5 RCHAVE

   12 assinatura_funcoes: %empty
   13                   | assinaturas PONTOVIRGULA assinatura_funcoes

   14 assinaturas: assinatura_proc
   15            | assinatura_funcao

   16 $@6: %empty

   17 $@7: %empty

   18 assinatura_funcao: FUNCAO tipo ID LPARENTESES $@6 parametros $@7 RPARENTESES

   19 $@8: %empty

   20 $@9: %empty

   21 assinatura_proc: PROC ID LPARENTESES $@8 parametros $@9 RPARENTESES

   22 parametros: %empty
   23           | parametro VIRGULA parametros
   24           | parametro

   25 parametro: tipo ID

   26 bloco_funcoes: %empty
   27              | BFUNCOES LCHAVE funcoes_proc RCHAVE

   28 funcoes_proc: %empty
   29             | definicoes_funcoes_proc funcoes_proc

   30 definicoes_funcoes_proc: definicao_funcao
   31                        | definicao_procedimento

   32 $@10: %empty

   33 $@11: %empty

   34 definicao_funcao: FUNCAO tipo ID LPARENTESES parametros RPARENTESES LCHAVE $@10 sentencas $@11 RCHAVE

   35 $@12: %empty

   36 $@13: %empty

   37 definicao_procedimento: PROC ID LPARENTESES parametros RPARENTESES LCHAVE $@12 sentencas $@13 RCHAVE

   38 chamada_funcao: ID LPARENTESES parametros_chamada RPARENTESES

   39 retorne: RETORNE expressao

   40 parametros_chamada: %empty
   41                   | parametro_chamada VIRGULA parametros_chamada
   42                   | parametro_chamada

   43 parametro_chamada: ARROBA termo
   44                  | termo

   45 $@14: %empty

   46 $@15: %empty

   47 bloco_principal: BPRINCIPAL LCHAVE $@14 sentencas $@15 RCHAVE

   48 sentencas: %empty
   49          | sentenca PONTOVIRGULA sentencas

   50 sentenca: comando
   51         | controle
   52         | repeticao

   53 controle: bloco_se
   54         | PARE

   55 bloco_se: se_simplificado

   56 $@16: %empty

   57 $@17: %empty

   58 bloco_se: se_simplificado SENAO LCHAVE $@16 sentencas $@17 RCHAVE
   59         | se_simplificado SENAO bloco_se

   60 $@18: %empty

   61 $@19: %empty

   62 se_simplificado: SE LPARENTESES expressao RPARENTESES EXECUTE LCHAVE $@18 sentencas $@19 RCHAVE

   63 comando: declaracao
   64        | imprime
   65        | leia
   66        | expressao
   67        | atribuicao
   68        | chamada_funcao
   69        | retorne

   70 atribuicao: ID atribuicao_unaria
   71           | ID atribuicao_binaria expressao

   72 atribuicao_binaria: ATRIB
   73                   | ATRIB_SOMA
   74                   | ATRIB_SUB
   75                   | ATRIB_MULT
   76                   | ATRIB_DIV
   77                   | ATRIB_MOD

   78 atribuicao_unaria: INC
   79                  | DEC

   80 repeticao: bloco_enquanto
   81          | bloco_faca_enquanto
   82          | bloco_para

   83 $@20: %empty

   84 $@21: %empty

   85 bloco_enquanto: ENQUANTO LPARENTESES expressao RPARENTESES EXECUTE LCHAVE $@20 sentencas $@21 RCHAVE

   86 $@22: %empty

   87 $@23: %empty

   88 bloco_faca_enquanto: EXECUTE LCHAVE $@22 sentencas $@23 RCHAVE ENQUANTO LPARENTESES expressao RPARENTESES

   89 $@24: %empty

   90 $@25: %empty

   91 bloco_para: PARA LPARENTESES $@24 declaracao_para $@25 PONTOVIRGULA expressao PONTOVIRGULA comando_para RPARENTESES EXECUTE LCHAVE sentencas RCHAVE

   92 declaracao_para: %empty
   93                | declaracao

   94 comando_para: %empty
   95             | comando

   96 imprime: IMPRIMA LPARENTESES termos RPARENTESES

   97 leia: LEIA LPARENTESES ids_leia RPARENTESES

   98 declaracao: tipo ID
   99           | tipo ID ATRIB expressao

  100 expressao: termo
  101          | operador_unario expressao
  102          | termo operador_binario expressao
  103          | LPARENTESES expressao RPARENTESES
  104          | chamada_funcao operador_binario expressao

  105 operador_unario: SUB
  106                | NEGACAO
  107                | ARROBA

  108 operador_binario: operador_booleano
  109                 | operador_relacional
  110                 | operador_aritmetico

  111 operador_relacional: MENORIGUAL
  112                    | MAIORIQUAL
  113                    | IGUAL
  114                    | DIFERENTE
  115                    | MAIOR
  116                    | MENOR

  117 operador_aritmetico: MULT
  118                    | DIV
  119                    | MOD
  120                    | EXP
  121                    | SUB
  122                    | SOMA

  123 operador_booleano: E_LOG
  124                  | OU_LOG

  125 tipo: tipo_primitivo
  126     | tipo_vetor
  127     | tipo_registro

  128 tipo_registro: MEU_TIPO ID

  129 tipo_vetor: VETOR tipo_primitivo tamanho_vetor tamanho_vetor
  130           | VETOR tipo_primitivo tamanho_vetor

  131 tamanho_vetor: LCOLCHETE termo RCOLCHETE

  132 tipo_primitivo: INTEIRO
  133               | REAL
  134               | CARACTERE
  135               | TEXTO
  136               | BOOL

  137 termos: termo
  138       | termo VIRGULA termos

  139 ids_leia: ID
  140         | ID VIRGULA ids_leia

  141 termo: ID
  142      | literal

  143 literal: LIT_REAL
  144        | LIT_BOOL
  145        | LIT_INT
  146        | LIT_TEXTO


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 11 18 21 25 34 37 38 70 71 98 99 128 139 140 141
LIT_TEXTO (259) 146
LIT_BOOL (260) 144
LIT_REAL (261) 143
LIT_INT (262) 145
MENORIGUAL (263) 111
MAIORIQUAL (264) 112
IGUAL (265) 113
DIFERENTE (266) 114
MAIOR (267) 115
MENOR (268) 116
ATRIB (269) 72 99
ATRIB_SOMA (270) 73
ATRIB_SUB (271) 74
ATRIB_MULT (272) 75
ATRIB_DIV (273) 76
ATRIB_MOD (274) 77
NEGACAO (275) 106
INC (276) 78
DEC (277) 79
E_LOG (278) 123
OU_LOG (279) 124
ARROBA (280) 43 107
MULT (281) 117
SUB (282) 105 121
SOMA (283) 122
DIV (284) 118
MOD (285) 119
EXP (286) 120
BOOL (287) 136
TEXTO (288) 135
CARACTERE (289) 134
REAL (290) 133
INTEIRO (291) 132
PARE (292) 54
ASPAS_DUPLAS (293)
ASPAS_SIMPLES (294)
LCOLCHETE (295) 131
RCOLCHETE (296) 131
LCHAVE (297) 11 27 34 37 47 58 62 85 88 91
RCHAVE (298) 11 27 34 37 47 58 62 85 88 91
LPARENTESES (299) 18 21 34 37 38 62 85 88 91 96 97 103
RPARENTESES (300) 18 21 34 37 38 62 85 88 91 96 97 103
SE (301) 62
IMPRIMA (302) 96
LEIA (303) 97
ENQUANTO (304) 85 88
PARA (305) 91
EXECUTE (306) 62 85 88 91
SENAO (307) 58 59
CONSTANTE (308)
RETORNE (309) 39
VIRGULA (310) 23 41 138 140
PONTOVIRGULA (311) 6 13 49 91
MEU_TIPO (312) 11 128
BPRINCIPAL (313) 47
BFUNCOES (314) 27
FUNCAO (315) 18 34
PROC (316) 21 37
VETOR (317) 129 130
CERQUILHA (318)


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
programa (65)
    on left: 4, on right: 0
$@1 (66)
    on left: 1, on right: 4
$@2 (67)
    on left: 2, on right: 4
$@3 (68)
    on left: 3, on right: 4
declaracoes (69)
    on left: 5 6, on right: 4 6
declaracao_global (70)
    on left: 7 8, on right: 6
declaracao_registro (71)
    on left: 11, on right: 8
$@4 (72)
    on left: 9, on right: 11
$@5 (73)
    on left: 10, on right: 11
assinatura_funcoes (74)
    on left: 12 13, on right: 4 13
assinaturas (75)
    on left: 14 15, on right: 13
assinatura_funcao (76)
    on left: 18, on right: 15
$@6 (77)
    on left: 16, on right: 18
$@7 (78)
    on left: 17, on right: 18
assinatura_proc (79)
    on left: 21, on right: 14
$@8 (80)
    on left: 19, on right: 21
$@9 (81)
    on left: 20, on right: 21
parametros (82)
    on left: 22 23 24, on right: 11 18 21 23 34 37
parametro (83)
    on left: 25, on right: 23 24
bloco_funcoes (84)
    on left: 26 27, on right: 4
funcoes_proc (85)
    on left: 28 29, on right: 27 29
definicoes_funcoes_proc (86)
    on left: 30 31, on right: 29
definicao_funcao (87)
    on left: 34, on right: 30
$@10 (88)
    on left: 32, on right: 34
$@11 (89)
    on left: 33, on right: 34
definicao_procedimento (90)
    on left: 37, on right: 31
$@12 (91)
    on left: 35, on right: 37
$@13 (92)
    on left: 36, on right: 37
chamada_funcao (93)
    on left: 38, on right: 68 104
retorne (94)
    on left: 39, on right: 69
parametros_chamada (95)
    on left: 40 41 42, on right: 38 41
parametro_chamada (96)
    on left: 43 44, on right: 41 42
bloco_principal (97)
    on left: 47, on right: 4
$@14 (98)
    on left: 45, on right: 47
$@15 (99)
    on left: 46, on right: 47
sentencas (100)
    on left: 48 49, on right: 34 37 47 49 58 62 85 88 91
sentenca (101)
    on left: 50 51 52, on right: 49
controle (102)
    on left: 53 54, on right: 51
bloco_se (103)
    on left: 55 58 59, on right: 53 59
$@16 (104)
    on left: 56, on right: 58
$@17 (105)
    on left: 57, on right: 58
se_simplificado (106)
    on left: 62, on right: 55 58 59
$@18 (107)
    on left: 60, on right: 62
$@19 (108)
    on left: 61, on right: 62
comando (109)
    on left: 63 64 65 66 67 68 69, on right: 50 95
atribuicao (110)
    on left: 70 71, on right: 67
atribuicao_binaria (111)
    on left: 72 73 74 75 76 77, on right: 71
atribuicao_unaria (112)
    on left: 78 79, on right: 70
repeticao (113)
    on left: 80 81 82, on right: 52
bloco_enquanto (114)
    on left: 85, on right: 80
$@20 (115)
    on left: 83, on right: 85
$@21 (116)
    on left: 84, on right: 85
bloco_faca_enquanto (117)
    on left: 88, on right: 81
$@22 (118)
    on left: 86, on right: 88
$@23 (119)
    on left: 87, on right: 88
bloco_para (120)
    on left: 91, on right: 82
$@24 (121)
    on left: 89, on right: 91
$@25 (122)
    on left: 90, on right: 91
declaracao_para (123)
    on left: 92 93, on right: 91
comando_para (124)
    on left: 94 95, on right: 91
imprime (125)
    on left: 96, on right: 64
leia (126)
    on left: 97, on right: 65
declaracao (127)
    on left: 98 99, on right: 7 63 93
expressao (128)
    on left: 100 101 102 103 104, on right: 39 62 66 71 85 88 91 99
    101 102 103 104
operador_unario (129)
    on left: 105 106 107, on right: 101
operador_binario (130)
    on left: 108 109 110, on right: 102 104
operador_relacional (131)
    on left: 111 112 113 114 115 116, on right: 109
operador_aritmetico (132)
    on left: 117 118 119 120 121 122, on right: 110
operador_booleano (133)
    on left: 123 124, on right: 108
tipo (134)
    on left: 125 126 127, on right: 18 25 34 98 99
tipo_registro (135)
    on left: 128, on right: 127
tipo_vetor (136)
    on left: 129 130, on right: 126
tamanho_vetor (137)
    on left: 131, on right: 129 130
tipo_primitivo (138)
    on left: 132 133 134 135 136, on right: 125 129 130
termos (139)
    on left: 137 138, on right: 96 138
ids_leia (140)
    on left: 139 140, on right: 97 140
termo (141)
    on left: 141 142, on right: 43 44 100 102 131 137 138
literal (142)
    on left: 143 144 145 146, on right: 142


State 0

    0 $accept: . programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    4 programa: $@1 . declaracoes $@2 assinatura_funcoes $@3 bloco_principal bloco_funcoes

    BOOL       shift, and go to state 4
    TEXTO      shift, and go to state 5
    CARACTERE  shift, and go to state 6
    REAL       shift, and go to state 7
    INTEIRO    shift, and go to state 8
    MEU_TIPO   shift, and go to state 9
    VETOR      shift, and go to state 10

    $default  reduce using rule 5 (declaracoes)

    declaracoes          go to state 11
    declaracao_global    go to state 12
    declaracao_registro  go to state 13
    declaracao           go to state 14
    tipo                 go to state 15
    tipo_registro        go to state 16
    tipo_vetor           go to state 17
    tipo_primitivo       go to state 18


State 3

    0 $accept: programa $end .

    $default  accept


State 4

  136 tipo_primitivo: BOOL .

    $default  reduce using rule 136 (tipo_primitivo)


State 5

  135 tipo_primitivo: TEXTO .

    $default  reduce using rule 135 (tipo_primitivo)


State 6

  134 tipo_primitivo: CARACTERE .

    $default  reduce using rule 134 (tipo_primitivo)


State 7

  133 tipo_primitivo: REAL .

    $default  reduce using rule 133 (tipo_primitivo)


State 8

  132 tipo_primitivo: INTEIRO .

    $default  reduce using rule 132 (tipo_primitivo)


State 9

   11 declaracao_registro: MEU_TIPO . ID LCHAVE $@4 parametros $@5 RCHAVE
  128 tipo_registro: MEU_TIPO . ID

    ID  shift, and go to state 19


State 10

  129 tipo_vetor: VETOR . tipo_primitivo tamanho_vetor tamanho_vetor
  130           | VETOR . tipo_primitivo tamanho_vetor

    BOOL       shift, and go to state 4
    TEXTO      shift, and go to state 5
    CARACTERE  shift, and go to state 6
    REAL       shift, and go to state 7
    INTEIRO    shift, and go to state 8

    tipo_primitivo  go to state 20


State 11

    4 programa: $@1 declaracoes . $@2 assinatura_funcoes $@3 bloco_principal bloco_funcoes

    $default  reduce using rule 2 ($@2)

    $@2  go to state 21


State 12

    6 declaracoes: declaracao_global . PONTOVIRGULA declaracoes

    PONTOVIRGULA  shift, and go to state 22


State 13

    8 declaracao_global: declaracao_registro .

    $default  reduce using rule 8 (declaracao_global)


State 14

    7 declaracao_global: declaracao .

    $default  reduce using rule 7 (declaracao_global)


State 15

   98 declaracao: tipo . ID
   99           | tipo . ID ATRIB expressao

    ID  shift, and go to state 23


State 16

  127 tipo: tipo_registro .

    $default  reduce using rule 127 (tipo)


State 17

  126 tipo: tipo_vetor .

    $default  reduce using rule 126 (tipo)


State 18

  125 tipo: tipo_primitivo .

    $default  reduce using rule 125 (tipo)


State 19

   11 declaracao_registro: MEU_TIPO ID . LCHAVE $@4 parametros $@5 RCHAVE
  128 tipo_registro: MEU_TIPO ID .

    LCHAVE  shift, and go to state 24

    $default  reduce using rule 128 (tipo_registro)


State 20

  129 tipo_vetor: VETOR tipo_primitivo . tamanho_vetor tamanho_vetor
  130           | VETOR tipo_primitivo . tamanho_vetor

    LCOLCHETE  shift, and go to state 25

    tamanho_vetor  go to state 26


State 21

    4 programa: $@1 declaracoes $@2 . assinatura_funcoes $@3 bloco_principal bloco_funcoes

    FUNCAO  shift, and go to state 27
    PROC    shift, and go to state 28

    $default  reduce using rule 12 (assinatura_funcoes)

    assinatura_funcoes  go to state 29
    assinaturas         go to state 30
    assinatura_funcao   go to state 31
    assinatura_proc     go to state 32


State 22

    6 declaracoes: declaracao_global PONTOVIRGULA . declaracoes

    BOOL       shift, and go to state 4
    TEXTO      shift, and go to state 5
    CARACTERE  shift, and go to state 6
    REAL       shift, and go to state 7
    INTEIRO    shift, and go to state 8
    MEU_TIPO   shift, and go to state 9
    VETOR      shift, and go to state 10

    $default  reduce using rule 5 (declaracoes)

    declaracoes          go to state 33
    declaracao_global    go to state 12
    declaracao_registro  go to state 13
    declaracao           go to state 14
    tipo                 go to state 15
    tipo_registro        go to state 16
    tipo_vetor           go to state 17
    tipo_primitivo       go to state 18


State 23

   98 declaracao: tipo ID .
   99           | tipo ID . ATRIB expressao

    ATRIB  shift, and go to state 34

    $default  reduce using rule 98 (declaracao)


State 24

   11 declaracao_registro: MEU_TIPO ID LCHAVE . $@4 parametros $@5 RCHAVE

    $default  reduce using rule 9 ($@4)

    $@4  go to state 35


State 25

  131 tamanho_vetor: LCOLCHETE . termo RCOLCHETE

    ID         shift, and go to state 36
    LIT_TEXTO  shift, and go to state 37
    LIT_BOOL   shift, and go to state 38
    LIT_REAL   shift, and go to state 39
    LIT_INT    shift, and go to state 40

    termo    go to state 41
    literal  go to state 42


State 26

  129 tipo_vetor: VETOR tipo_primitivo tamanho_vetor . tamanho_vetor
  130           | VETOR tipo_primitivo tamanho_vetor .

    LCOLCHETE  shift, and go to state 25

    $default  reduce using rule 130 (tipo_vetor)

    tamanho_vetor  go to state 43


State 27

   18 assinatura_funcao: FUNCAO . tipo ID LPARENTESES $@6 parametros $@7 RPARENTESES

    BOOL       shift, and go to state 4
    TEXTO      shift, and go to state 5
    CARACTERE  shift, and go to state 6
    REAL       shift, and go to state 7
    INTEIRO    shift, and go to state 8
    MEU_TIPO   shift, and go to state 44
    VETOR      shift, and go to state 10

    tipo            go to state 45
    tipo_registro   go to state 16
    tipo_vetor      go to state 17
    tipo_primitivo  go to state 18


State 28

   21 assinatura_proc: PROC . ID LPARENTESES $@8 parametros $@9 RPARENTESES

    ID  shift, and go to state 46


State 29

    4 programa: $@1 declaracoes $@2 assinatura_funcoes . $@3 bloco_principal bloco_funcoes

    $default  reduce using rule 3 ($@3)

    $@3  go to state 47


State 30

   13 assinatura_funcoes: assinaturas . PONTOVIRGULA assinatura_funcoes

    PONTOVIRGULA  shift, and go to state 48


State 31

   15 assinaturas: assinatura_funcao .

    $default  reduce using rule 15 (assinaturas)


State 32

   14 assinaturas: assinatura_proc .

    $default  reduce using rule 14 (assinaturas)


State 33

    6 declaracoes: declaracao_global PONTOVIRGULA declaracoes .

    $default  reduce using rule 6 (declaracoes)


State 34

   99 declaracao: tipo ID ATRIB . expressao

    ID           shift, and go to state 49
    LIT_TEXTO    shift, and go to state 37
    LIT_BOOL     shift, and go to state 38
    LIT_REAL     shift, and go to state 39
    LIT_INT      shift, and go to state 40
    NEGACAO      shift, and go to state 50
    ARROBA       shift, and go to state 51
    SUB          shift, and go to state 52
    LPARENTESES  shift, and go to state 53

    chamada_funcao   go to state 54
    expressao        go to state 55
    operador_unario  go to state 56
    termo            go to state 57
    literal          go to state 42


State 35

   11 declaracao_registro: MEU_TIPO ID LCHAVE $@4 . parametros $@5 RCHAVE

    BOOL       shift, and go to state 4
    TEXTO      shift, and go to state 5
    CARACTERE  shift, and go to state 6
    REAL       shift, and go to state 7
    INTEIRO    shift, and go to state 8
    MEU_TIPO   shift, and go to state 44
    VETOR      shift, and go to state 10

    $default  reduce using rule 22 (parametros)

    parametros      go to state 58
    parametro       go to state 59
    tipo            go to state 60
    tipo_registro   go to state 16
    tipo_vetor      go to state 17
    tipo_primitivo  go to state 18


State 36

  141 termo: ID .

    $default  reduce using rule 141 (termo)


State 37

  146 literal: LIT_TEXTO .

    $default  reduce using rule 146 (literal)


State 38

  144 literal: LIT_BOOL .

    $default  reduce using rule 144 (literal)


State 39

  143 literal: LIT_REAL .

    $default  reduce using rule 143 (literal)


State 40

  145 literal: LIT_INT .

    $default  reduce using rule 145 (literal)


State 41

  131 tamanho_vetor: LCOLCHETE termo . RCOLCHETE

    RCOLCHETE  shift, and go to state 61


State 42

  142 termo: literal .

    $default  reduce using rule 142 (termo)


State 43

  129 tipo_vetor: VETOR tipo_primitivo tamanho_vetor tamanho_vetor .

    $default  reduce using rule 129 (tipo_vetor)


State 44

  128 tipo_registro: MEU_TIPO . ID

    ID  shift, and go to state 62


State 45

   18 assinatura_funcao: FUNCAO tipo . ID LPARENTESES $@6 parametros $@7 RPARENTESES

    ID  shift, and go to state 63


State 46

   21 assinatura_proc: PROC ID . LPARENTESES $@8 parametros $@9 RPARENTESES

    LPARENTESES  shift, and go to state 64


State 47

    4 programa: $@1 declaracoes $@2 assinatura_funcoes $@3 . bloco_principal bloco_funcoes

    BPRINCIPAL  shift, and go to state 65

    bloco_principal  go to state 66


State 48

   13 assinatura_funcoes: assinaturas PONTOVIRGULA . assinatura_funcoes

    FUNCAO  shift, and go to state 27
    PROC    shift, and go to state 28

    $default  reduce using rule 12 (assinatura_funcoes)

    assinatura_funcoes  go to state 67
    assinaturas         go to state 30
    assinatura_funcao   go to state 31
    assinatura_proc     go to state 32


State 49

   38 chamada_funcao: ID . LPARENTESES parametros_chamada RPARENTESES
  141 termo: ID .

    LPARENTESES  shift, and go to state 68

    $default  reduce using rule 141 (termo)


State 50

  106 operador_unario: NEGACAO .

    $default  reduce using rule 106 (operador_unario)


State 51

  107 operador_unario: ARROBA .

    $default  reduce using rule 107 (operador_unario)


State 52

  105 operador_unario: SUB .

    $default  reduce using rule 105 (operador_unario)


State 53

  103 expressao: LPARENTESES . expressao RPARENTESES

    ID           shift, and go to state 49
    LIT_TEXTO    shift, and go to state 37
    LIT_BOOL     shift, and go to state 38
    LIT_REAL     shift, and go to state 39
    LIT_INT      shift, and go to state 40
    NEGACAO      shift, and go to state 50
    ARROBA       shift, and go to state 51
    SUB          shift, and go to state 52
    LPARENTESES  shift, and go to state 53

    chamada_funcao   go to state 54
    expressao        go to state 69
    operador_unario  go to state 56
    termo            go to state 57
    literal          go to state 42


State 54

  104 expressao: chamada_funcao . operador_binario expressao

    MENORIGUAL  shift, and go to state 70
    MAIORIQUAL  shift, and go to state 71
    IGUAL       shift, and go to state 72
    DIFERENTE   shift, and go to state 73
    MAIOR       shift, and go to state 74
    MENOR       shift, and go to state 75
    E_LOG       shift, and go to state 76
    OU_LOG      shift, and go to state 77
    MULT        shift, and go to state 78
    SUB         shift, and go to state 79
    SOMA        shift, and go to state 80
    DIV         shift, and go to state 81
    MOD         shift, and go to state 82
    EXP         shift, and go to state 83

    operador_binario     go to state 84
    operador_relacional  go to state 85
    operador_aritmetico  go to state 86
    operador_booleano    go to state 87


State 55

   99 declaracao: tipo ID ATRIB expressao .

    $default  reduce using rule 99 (declaracao)


State 56

  101 expressao: operador_unario . expressao

    ID           shift, and go to state 49
    LIT_TEXTO    shift, and go to state 37
    LIT_BOOL     shift, and go to state 38
    LIT_REAL     shift, and go to state 39
    LIT_INT      shift, and go to state 40
    NEGACAO      shift, and go to state 50
    ARROBA       shift, and go to state 51
    SUB          shift, and go to state 52
    LPARENTESES  shift, and go to state 53

    chamada_funcao   go to state 54
    expressao        go to state 88
    operador_unario  go to state 56
    termo            go to state 57
    literal          go to state 42


State 57

  100 expressao: termo .
  102          | termo . operador_binario expressao

    MENORIGUAL  shift, and go to state 70
    MAIORIQUAL  shift, and go to state 71
    IGUAL       shift, and go to state 72
    DIFERENTE   shift, and go to state 73
    MAIOR       shift, and go to state 74
    MENOR       shift, and go to state 75
    E_LOG       shift, and go to state 76
    OU_LOG      shift, and go to state 77
    MULT        shift, and go to state 78
    SUB         shift, and go to state 79
    SOMA        shift, and go to state 80
    DIV         shift, and go to state 81
    MOD         shift, and go to state 82
    EXP         shift, and go to state 83

    $default  reduce using rule 100 (expressao)

    operador_binario     go to state 89
    operador_relacional  go to state 85
    operador_aritmetico  go to state 86
    operador_booleano    go to state 87


State 58

   11 declaracao_registro: MEU_TIPO ID LCHAVE $@4 parametros . $@5 RCHAVE

    $default  reduce using rule 10 ($@5)

    $@5  go to state 90


State 59

   23 parametros: parametro . VIRGULA parametros
   24           | parametro .

    VIRGULA  shift, and go to state 91

    $default  reduce using rule 24 (parametros)


State 60

   25 parametro: tipo . ID

    ID  shift, and go to state 92


State 61

  131 tamanho_vetor: LCOLCHETE termo RCOLCHETE .

    $default  reduce using rule 131 (tamanho_vetor)


State 62

  128 tipo_registro: MEU_TIPO ID .

    $default  reduce using rule 128 (tipo_registro)


State 63

   18 assinatura_funcao: FUNCAO tipo ID . LPARENTESES $@6 parametros $@7 RPARENTESES

    LPARENTESES  shift, and go to state 93


State 64

   21 assinatura_proc: PROC ID LPARENTESES . $@8 parametros $@9 RPARENTESES

    $default  reduce using rule 19 ($@8)

    $@8  go to state 94


State 65

   47 bloco_principal: BPRINCIPAL . LCHAVE $@14 sentencas $@15 RCHAVE

    LCHAVE  shift, and go to state 95


State 66

    4 programa: $@1 declaracoes $@2 assinatura_funcoes $@3 bloco_principal . bloco_funcoes

    BFUNCOES  shift, and go to state 96

    $default  reduce using rule 26 (bloco_funcoes)

    bloco_funcoes  go to state 97


State 67

   13 assinatura_funcoes: assinaturas PONTOVIRGULA assinatura_funcoes .

    $default  reduce using rule 13 (assinatura_funcoes)


State 68

   38 chamada_funcao: ID LPARENTESES . parametros_chamada RPARENTESES

    ID         shift, and go to state 36
    LIT_TEXTO  shift, and go to state 37
    LIT_BOOL   shift, and go to state 38
    LIT_REAL   shift, and go to state 39
    LIT_INT    shift, and go to state 40
    ARROBA     shift, and go to state 98

    $default  reduce using rule 40 (parametros_chamada)

    parametros_chamada  go to state 99
    parametro_chamada   go to state 100
    termo               go to state 101
    literal             go to state 42


State 69

  103 expressao: LPARENTESES expressao . RPARENTESES

    RPARENTESES  shift, and go to state 102


State 70

  111 operador_relacional: MENORIGUAL .

    $default  reduce using rule 111 (operador_relacional)


State 71

  112 operador_relacional: MAIORIQUAL .

    $default  reduce using rule 112 (operador_relacional)


State 72

  113 operador_relacional: IGUAL .

    $default  reduce using rule 113 (operador_relacional)


State 73

  114 operador_relacional: DIFERENTE .

    $default  reduce using rule 114 (operador_relacional)


State 74

  115 operador_relacional: MAIOR .

    $default  reduce using rule 115 (operador_relacional)


State 75

  116 operador_relacional: MENOR .

    $default  reduce using rule 116 (operador_relacional)


State 76

  123 operador_booleano: E_LOG .

    $default  reduce using rule 123 (operador_booleano)


State 77

  124 operador_booleano: OU_LOG .

    $default  reduce using rule 124 (operador_booleano)


State 78

  117 operador_aritmetico: MULT .

    $default  reduce using rule 117 (operador_aritmetico)


State 79

  121 operador_aritmetico: SUB .

    $default  reduce using rule 121 (operador_aritmetico)


State 80

  122 operador_aritmetico: SOMA .

    $default  reduce using rule 122 (operador_aritmetico)


State 81

  118 operador_aritmetico: DIV .

    $default  reduce using rule 118 (operador_aritmetico)


State 82

  119 operador_aritmetico: MOD .

    $default  reduce using rule 119 (operador_aritmetico)


State 83

  120 operador_aritmetico: EXP .

    $default  reduce using rule 120 (operador_aritmetico)


State 84

  104 expressao: chamada_funcao operador_binario . expressao

    ID           shift, and go to state 49
    LIT_TEXTO    shift, and go to state 37
    LIT_BOOL     shift, and go to state 38
    LIT_REAL     shift, and go to state 39
    LIT_INT      shift, and go to state 40
    NEGACAO      shift, and go to state 50
    ARROBA       shift, and go to state 51
    SUB          shift, and go to state 52
    LPARENTESES  shift, and go to state 53

    chamada_funcao   go to state 54
    expressao        go to state 103
    operador_unario  go to state 56
    termo            go to state 57
    literal          go to state 42


State 85

  109 operador_binario: operador_relacional .

    $default  reduce using rule 109 (operador_binario)


State 86

  110 operador_binario: operador_aritmetico .

    $default  reduce using rule 110 (operador_binario)


State 87

  108 operador_binario: operador_booleano .

    $default  reduce using rule 108 (operador_binario)


State 88

  101 expressao: operador_unario expressao .

    $default  reduce using rule 101 (expressao)


State 89

  102 expressao: termo operador_binario . expressao

    ID           shift, and go to state 49
    LIT_TEXTO    shift, and go to state 37
    LIT_BOOL     shift, and go to state 38
    LIT_REAL     shift, and go to state 39
    LIT_INT      shift, and go to state 40
    NEGACAO      shift, and go to state 50
    ARROBA       shift, and go to state 51
    SUB          shift, and go to state 52
    LPARENTESES  shift, and go to state 53

    chamada_funcao   go to state 54
    expressao        go to state 104
    operador_unario  go to state 56
    termo            go to state 57
    literal          go to state 42


State 90

   11 declaracao_registro: MEU_TIPO ID LCHAVE $@4 parametros $@5 . RCHAVE

    RCHAVE  shift, and go to state 105


State 91

   23 parametros: parametro VIRGULA . parametros

    BOOL       shift, and go to state 4
    TEXTO      shift, and go to state 5
    CARACTERE  shift, and go to state 6
    REAL       shift, and go to state 7
    INTEIRO    shift, and go to state 8
    MEU_TIPO   shift, and go to state 44
    VETOR      shift, and go to state 10

    $default  reduce using rule 22 (parametros)

    parametros      go to state 106
    parametro       go to state 59
    tipo            go to state 60
    tipo_registro   go to state 16
    tipo_vetor      go to state 17
    tipo_primitivo  go to state 18


State 92

   25 parametro: tipo ID .

    $default  reduce using rule 25 (parametro)


State 93

   18 assinatura_funcao: FUNCAO tipo ID LPARENTESES . $@6 parametros $@7 RPARENTESES

    $default  reduce using rule 16 ($@6)

    $@6  go to state 107


State 94

   21 assinatura_proc: PROC ID LPARENTESES $@8 . parametros $@9 RPARENTESES

    BOOL       shift, and go to state 4
    TEXTO      shift, and go to state 5
    CARACTERE  shift, and go to state 6
    REAL       shift, and go to state 7
    INTEIRO    shift, and go to state 8
    MEU_TIPO   shift, and go to state 44
    VETOR      shift, and go to state 10

    $default  reduce using rule 22 (parametros)

    parametros      go to state 108
    parametro       go to state 59
    tipo            go to state 60
    tipo_registro   go to state 16
    tipo_vetor      go to state 17
    tipo_primitivo  go to state 18


State 95

   47 bloco_principal: BPRINCIPAL LCHAVE . $@14 sentencas $@15 RCHAVE

    $default  reduce using rule 45 ($@14)

    $@14  go to state 109


State 96

   27 bloco_funcoes: BFUNCOES . LCHAVE funcoes_proc RCHAVE

    LCHAVE  shift, and go to state 110


State 97

    4 programa: $@1 declaracoes $@2 assinatura_funcoes $@3 bloco_principal bloco_funcoes .

    $default  reduce using rule 4 (programa)


State 98

   43 parametro_chamada: ARROBA . termo

    ID         shift, and go to state 36
    LIT_TEXTO  shift, and go to state 37
    LIT_BOOL   shift, and go to state 38
    LIT_REAL   shift, and go to state 39
    LIT_INT    shift, and go to state 40

    termo    go to state 111
    literal  go to state 42


State 99

   38 chamada_funcao: ID LPARENTESES parametros_chamada . RPARENTESES

    RPARENTESES  shift, and go to state 112


State 100

   41 parametros_chamada: parametro_chamada . VIRGULA parametros_chamada
   42                   | parametro_chamada .

    VIRGULA  shift, and go to state 113

    $default  reduce using rule 42 (parametros_chamada)


State 101

   44 parametro_chamada: termo .

    $default  reduce using rule 44 (parametro_chamada)


State 102

  103 expressao: LPARENTESES expressao RPARENTESES .

    $default  reduce using rule 103 (expressao)


State 103

  104 expressao: chamada_funcao operador_binario expressao .

    $default  reduce using rule 104 (expressao)


State 104

  102 expressao: termo operador_binario expressao .

    $default  reduce using rule 102 (expressao)


State 105

   11 declaracao_registro: MEU_TIPO ID LCHAVE $@4 parametros $@5 RCHAVE .

    $default  reduce using rule 11 (declaracao_registro)


State 106
